examples/test_package/Double_dc_full/steps/benchrps___rough_run5/#test_analysis_1_result.txt
### Rock-Paper-Scissors Game Evaluation Report

---

#### **1. Document Title**  
Evaluation of Rock-Paper-Scissors ProbLog Implementation  

---

#### **2. Background and Purpose**  
The provided code implements the basic rules of the rock-paper-scissors game in ProbLog, including move definitions, win-lose relationships, and outcome calculations. The purpose of this evaluation is to verify the correctness of the implementation, analyze test results, and ensure compliance with ProbLog's logical and probabilistic rules.

---

#### **3. Test Results Summary**  
The test query `determine_winner([rock,rock,rock],[paper,paper,scissor],W)` resulted in an error:  
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'play/3' at 21:1.
```

**Failed Query:**  
- `determine_winner([rock,rock,rock],[paper,paper,scissor],W)`  
  - **Expected:** A result indicating the winner (`player1`, `player2`, or `draw`).  
  - **Actual:** Error due to undefined predicate `play/3`.

---

#### **4. Failure Localization**  
- **Failed Predicate:** `play/3`  
  - **Location:** Line 21  
  - **Issue:** The predicate `play/3` is called in `determine_winner/3` but is not defined in the code.  

---

#### **5. Root Cause Analysis**  
- **Logical Correctness:**  
  - The rules for `move/1`, `beats/2`, and `outcome/3` are logically correct and cover all possible game outcomes.  
  - The recursive predicate `compute_score/2` is correctly implemented for calculating the game score.  

- **Missing Predicate:**  
  - The predicate `play/3` is required to generate the list of outcomes (`Results`) from the moves of both players (`P1Moves` and `P2Moves`). Without this, the `determine_winner/3` predicate cannot function.  

- **Probabilistic Context:**  
  - The current implementation does not involve probabilistic facts or DeepProbLog features.  
  - **DeepProbLog Feature:** Not used.  

---

#### **6. Overall Analysis**  
- **Functional Requirements:**  
  - **Classical Reasoning:** Partially met. The basic rules are correct, but the missing `play/3` predicate prevents full functionality.  
  - **Probabilistic Reasoning:** Not applicable in this implementation.  
  - **Neural Network Integration:** Not used.  

- **Edge Cases:**  
  - Non-list inputs for `P1Moves` or `P2Moves` would cause errors.  
  - The recursive `compute_score/2` could face performance issues with very long lists.  

---

#### **7. Error Summary**  

| No. | Problem                     | Impact                          | Suggestion                          |
|-----|-----------------------------|---------------------------------|-------------------------------------|
| 1   | Undefined `play/3` predicate | Prevents game outcome calculation | Define `play/3` to map moves to outcomes. |
| 2   | No input validation         | May crash with invalid inputs   | Add checks for list inputs.         |

---

#### **Suggested Fix**  
Add the missing `play/3` predicate to generate outcomes from moves:  
```prolog
play([], [], []).
play([M1 | P1Moves], [M2 | P2Moves], [R | Results]) :-
    outcome(M1, M2, R),
    play(P1Moves, P2Moves, Results).
```

---

**Word Count:** ~400 words  

This report highlights the logical gaps in the implementation and provides actionable suggestions for improvement. The missing `play/3` predicate is the primary issue, and its addition will enable the full functionality of the game.